matched the boxes to align and fixed styling for admin dashboard

--- a/app/assets/stylesheets/admin_dash.css
+++ b/app/assets/stylesheets/admin_dash.css
@@ -85,6 +85,7 @@ h1 {
 }
 
 .horizontal-container {
+    margin-top: 50px;
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -103,18 +104,22 @@ h1 {
 .vertical-container {
     display: flex;
     flex-direction: column; 
-    width: 40%; 
+    width: 34%; 
 }
 
 
 .checkin-section {
-    width: 200px;
+    width: 90%;
     height: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    margin-bottom: 20px;
+    
 }
+
 
 .check-in-button {
     display: inline-block;
@@ -135,7 +140,6 @@ h1 {
     background-color: #f8f9fa; /* Light background for the section */
     border-radius: 8px; /* Rounded corners */
     padding: 20px; /* Spacing around the content */
-    margin-top: 20px; /* Space above the section */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
 }
 .event-buttons {
@@ -324,14 +328,14 @@ background-color: #45a049;
 
 
 
-.bottom-right-container {
+.bottom-left-container {
     position: fixed;
-    right: 10px; 
+    left: 10px; 
     bottom: 10px; 
     z-index: 1000; 
 }
 
-.bottom-right-link {
+.bottom-left-link {
     display: block; 
     padding: 10px; 
     background-color: #f44336; 
@@ -341,6 +345,6 @@ background-color: #45a049;
     text-decoration: none; 
 }
 
-.bottom-right-link:hover {
+.bottom-left-link:hover {
     background-color: #d32f2f;
 }
